[gd_scene load_steps=10 format=3 uid="uid://vkj7uamlpxxp"]

[ext_resource type="Script" path="res://addons/madtalk/components/DialogNodeItem_effect.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dyepkyvo6sodg" path="res://addons/madtalk/components/BtnTip.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://m0muqdnnedcu" path="res://addons/madtalk/components/DialogNodeItem_PopupMenu.tscn" id="5"]
[ext_resource type="FontFile" path="res://addons/madtalk/fonts/FreeSans_smal.tres" id="6"]
[ext_resource type="FontFile" uid="uid://bhcws34lw0ak5" path="res://addons/madtalk/fonts/FreeSans_tiny.tres" id="7"]
[ext_resource type="FontFile" path="res://addons/madtalk/fonts/FreeSans_bold_small.tres" id="8"]
[ext_resource type="StyleBox" path="res://addons/madtalk/components/resources/PanelStyle.tres" id="12"]
[ext_resource type="Texture2D" uid="uid://cg463wmvppw0u" path="res://addons/madtalk/images/header_effect.png" id="14"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.186, 0.172, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.06, 0.06, 0.06, 1)
border_blend = true

[node name="DialogNodeItem_effect" type="Control"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 165.0
offset_right = 284.0
offset_bottom = 199.0
script = ExtResource("1")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 128.0
offset_bottom = 33.0
texture = ExtResource("14")

[node name="EffectLabel" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 13.0
offset_right = -6.0
offset_bottom = -3.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 12
text = "Effect"
clip_text = true

[node name="PopupMenu" parent="." instance=ExtResource("5")]

[node name="DialogEdit" type="Window" parent="."]
initial_position = 2
size = Vector2i(500, 400)
visible = false
transient = true
exclusive = true
popup_window = true

[node name="Panel" type="Panel" parent="DialogEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("12")

[node name="Label" type="Label" parent="DialogEdit/Panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 33.0
offset_right = 108.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Effect Type"

[node name="BtnEffectType" type="OptionButton" parent="DialogEdit/Panel"]
layout_mode = 0
anchor_right = 1.0
offset_left = 112.0
offset_top = 25.0
offset_right = -76.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
item_count = 11
popup/item_0/text = "Change Sheet"
popup/item_0/id = 0
popup/item_1/text = "Set Variable"
popup/item_1/id = 1
popup/item_2/text = "Add Variable"
popup/item_2/id = 2
popup/item_3/text = "Randomize Variable"
popup/item_3/id = 3
popup/item_4/text = "Stamp Time"
popup/item_4/id = 4
popup/item_5/text = "Spend Minutes"
popup/item_5/id = 5
popup/item_6/text = "Spend Days"
popup/item_6/id = 6
popup/item_7/text = "Skip to Given Time"
popup/item_7/id = 7
popup/item_8/text = "Skip to Given Weekday"
popup/item_8/id = 8
popup/item_9/text = "Play Animation and Wait"
popup/item_9/id = 9
popup/item_10/text = "Custom Effect"
popup/item_10/id = 10

[node name="BtnTip" parent="DialogEdit/Panel" instance=ExtResource("4")]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.599
offset_top = 44.1581
offset_right = -13.599
offset_bottom = 70.1581

[node name="SpecificFields" type="Panel" parent="DialogEdit/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 72.0
offset_right = -8.0
offset_bottom = -38.0
theme_override_styles/panel = SubResource("1")

[node name="ChangeSheet" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/ChangeSheet"]
layout_mode = 0
offset_left = 33.9795
offset_top = 33.0356
offset_right = 261.979
offset_bottom = 47.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Stop this sequence and change to dialog sheet:"

[node name="Label3" type="Label" parent="DialogEdit/Panel/SpecificFields/ChangeSheet"]
layout_mode = 0
offset_left = 33.9795
offset_top = 145.036
offset_right = 317.979
offset_bottom = 159.036
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "(Items in current sequence below this effect will not run.)"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/ChangeSheet"]
layout_mode = 0
offset_left = 33.9795
offset_top = 97.0356
offset_right = 291.979
offset_bottom = 111.036
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Optional: start the dialog in sequence ID"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/ChangeSheet"]
layout_mode = 0
offset_left = 35.0
offset_top = 56.0
offset_right = 394.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. city_arrival"

[node name="EditValue1" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/ChangeSheet"]
layout_mode = 0
offset_left = 260.0
offset_top = 91.0
offset_right = 391.0
offset_bottom = 115.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
text = "0"
placeholder_text = "Start is always zero"

[node name="SetVariable" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/SetVariable"]
layout_mode = 0
offset_left = 49.9795
offset_top = 41.0356
offset_right = 277.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Set variable named"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/SetVariable"]
layout_mode = 0
offset_left = 52.0
offset_top = 73.0
offset_right = 178.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "to the fixed value"

[node name="Label3" type="Label" parent="DialogEdit/Panel/SpecificFields/SetVariable"]
layout_mode = 0
offset_left = 172.0
offset_top = 121.0
offset_right = 298.0
offset_bottom = 135.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "To use this variable in True/False checks,
enter the number:

        True:   1 (or any non-zero number)
        False:  0
"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/SetVariable"]
layout_mode = 0
offset_left = 166.0
offset_top = 35.0
offset_right = 371.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. player_health"

[node name="EditValue1" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/SetVariable"]
layout_mode = 0
offset_left = 166.0
offset_top = 69.0
offset_right = 249.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. 25.0"

[node name="AddVariable" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/AddVariable"]
layout_mode = 0
offset_left = 49.9795
offset_top = 41.0356
offset_right = 277.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Add to variable named"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/AddVariable"]
layout_mode = 0
offset_left = 52.0
offset_top = 73.0
offset_right = 178.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "the value (can be negative for subtraction)"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/AddVariable"]
layout_mode = 0
offset_left = 182.0
offset_top = 34.0
offset_right = 387.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. player_health"

[node name="EditValue1" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/AddVariable"]
layout_mode = 0
offset_left = 303.0
offset_top = 67.0
offset_right = 386.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. 25.0"

[node name="RandomizeVariable" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/RandomizeVariable"]
layout_mode = 0
offset_left = 49.9795
offset_top = 41.0356
offset_right = 277.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Set variable named"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/RandomizeVariable"]
layout_mode = 0
offset_left = 52.0
offset_top = 73.0
offset_right = 200.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "to a random value between"

[node name="Label4" type="Label" parent="DialogEdit/Panel/SpecificFields/RandomizeVariable"]
layout_mode = 0
offset_left = 52.0
offset_top = 89.0
offset_right = 200.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "(inclusive)"

[node name="Label3" type="Label" parent="DialogEdit/Panel/SpecificFields/RandomizeVariable"]
layout_mode = 0
offset_left = 294.0
offset_top = 73.0
offset_right = 315.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "and"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/RandomizeVariable"]
layout_mode = 0
offset_left = 182.0
offset_top = 32.0
offset_right = 387.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("6")
placeholder_text = "e.g. npc1_love"

[node name="EditValue1" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/RandomizeVariable"]
layout_mode = 0
offset_left = 221.0
offset_top = 69.0
offset_right = 282.313
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("6")
placeholder_text = "e.g. -5.0"

[node name="EditValue2" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/RandomizeVariable"]
layout_mode = 0
offset_left = 329.0
offset_top = 69.0
offset_right = 390.313
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("6")
placeholder_text = "e.g. 10.0"

[node name="StampTime" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/StampTime"]
layout_mode = 0
offset_left = 49.9795
offset_top = 41.0356
offset_right = 277.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Timestamp current in-game time value"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/StampTime"]
layout_mode = 0
offset_left = 52.0
offset_top = 73.0
offset_right = 200.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "to a variable named"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/StampTime"]
layout_mode = 0
offset_left = 182.0
offset_top = 67.0
offset_right = 387.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. player_entered_room3"

[node name="SpendMinutes" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/SpendMinutes"]
layout_mode = 0
offset_left = 65.9795
offset_top = 41.0356
offset_right = 293.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Advance current in-game time in"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/SpendMinutes"]
layout_mode = 0
offset_left = 180.0
offset_top = 73.0
offset_right = 328.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "minutes"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/SpendMinutes"]
layout_mode = 0
offset_left = 62.0
offset_top = 67.0
offset_right = 169.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. 15"

[node name="SpendDays" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/SpendDays"]
layout_mode = 0
offset_left = 65.9795
offset_top = 41.0356
offset_right = 293.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Advance current in-game time in"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/SpendDays"]
layout_mode = 0
offset_left = 180.0
offset_top = 73.0
offset_right = 328.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "days"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/SpendDays"]
layout_mode = 0
offset_left = 62.0
offset_top = 67.0
offset_right = 169.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. 2"

[node name="SkipToTime" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/SkipToTime"]
layout_mode = 0
offset_left = 66.0
offset_top = 41.0
offset_right = 274.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Advance in-game time until the time is"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/SkipToTime"]
layout_mode = 0
offset_left = 280.0
offset_top = 35.0
offset_right = 371.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. 07:00"

[node name="SkipToWeekday" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/SkipToWeekday"]
layout_mode = 0
offset_left = 66.0
offset_top = 41.0
offset_right = 274.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Advance in-game time until the weekday is"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/SkipToWeekday"]
layout_mode = 0
offset_left = 66.0
offset_top = 73.0
offset_right = 355.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Time will be set to 00:00 (beginning of the given day)."

[node name="Option0" type="OptionButton" parent="DialogEdit/Panel/SpecificFields/SkipToWeekday"]
layout_mode = 0
offset_left = 306.657
offset_top = 36.795
offset_right = 377.657
offset_bottom = 56.795
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
item_count = 7
popup/item_0/text = "Sunday"
popup/item_0/id = 0
popup/item_1/text = "Monday"
popup/item_1/id = 1
popup/item_2/text = "Tuesday"
popup/item_2/id = 2
popup/item_3/text = "Wednesday"
popup/item_3/id = 3
popup/item_4/text = "Thursday"
popup/item_4/id = 4
popup/item_5/text = "Friday"
popup/item_5/id = 5
popup/item_6/text = "Saturday"
popup/item_6/id = 6

[node name="WaitAnim" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/WaitAnim"]
layout_mode = 0
offset_left = 65.9795
offset_top = 41.0356
offset_right = 293.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Play animation named"

[node name="Label2" type="Label" parent="DialogEdit/Panel/SpecificFields/WaitAnim"]
layout_mode = 0
offset_left = 66.0
offset_top = 73.0
offset_right = 361.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "from the Effects AnimationPlayer set in the MadTalk node,
and wait for it to finish before continuing the sequence."

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/WaitAnim"]
layout_mode = 0
offset_left = 202.0
offset_top = 33.0
offset_right = 350.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. first_cutscene"

[node name="Custom" type="Control" parent="DialogEdit/Panel/SpecificFields"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DialogEdit/Panel/SpecificFields/Custom"]
layout_mode = 0
offset_left = 49.9795
offset_top = 41.0356
offset_right = 277.979
offset_bottom = 55.0356
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "Custom effect code for ID"

[node name="Label4" type="Label" parent="DialogEdit/Panel/SpecificFields/Custom"]
layout_mode = 0
offset_left = 52.0
offset_top = 70.0
offset_right = 193.0
offset_bottom = 93.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
text = "called with the data:"

[node name="Label5" type="Label" parent="DialogEdit/Panel/SpecificFields/Custom"]
layout_mode = 0
offset_left = 52.0
offset_top = 89.0
offset_right = 308.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("7")
theme_override_font_sizes/font_size = 12
text = "(Each line will be passed as a string in an Array)"

[node name="EditValue0" type="LineEdit" parent="DialogEdit/Panel/SpecificFields/Custom"]
layout_mode = 0
offset_left = 196.0
offset_top = 34.0
offset_right = 392.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 14
placeholder_text = "e.g. give_item"

[node name="EditValue1" type="TextEdit" parent="DialogEdit/Panel/SpecificFields/Custom"]
layout_mode = 0
offset_left = 52.0
offset_top = 114.0
offset_right = 411.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
highlight_current_line = true
draw_tabs = true
caret_blink = true

[node name="BottomBar" type="Control" parent="DialogEdit/Panel"]
anchors_preset = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0

[node name="BtnSave" type="Button" parent="DialogEdit/Panel/BottomBar"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -10.0
offset_right = -59.5
offset_bottom = 10.0
focus_mode = 0
text = "OK"

[node name="BtnCancel" type="Button" parent="DialogEdit/Panel/BottomBar"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 53.0
offset_top = -10.0
offset_right = 107.0
offset_bottom = 10.0
focus_mode = 0
text = "Cancel"

[connection signal="gui_input" from="." to="." method="_on_DialogNodeItem_effect_gui_input"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="item_selected" from="DialogEdit/Panel/BtnEffectType" to="." method="_on_DialogEdit_BtnConditionType_item_selected"]
[connection signal="pressed" from="DialogEdit/Panel/BottomBar/BtnSave" to="." method="_on_DialogEdit_BtnSave_pressed"]
[connection signal="pressed" from="DialogEdit/Panel/BottomBar/BtnCancel" to="." method="_on_DialogEdit_BtnCancel_pressed"]
